Updated sr. and reg. python software engineer vacancies
Updated vancancies for senior and regular python software engineer. Also updated on google drive.

--- a/index.html
+++ b/index.html
@@ -215,12 +215,11 @@
                     <h2>What you'll do</h2>
                     <p>You will work with our team of engineers to design, implement and deploy end-to-end Machine Learning solutions for ourselves and our clients. You’ll have the opportunity to work on challenging and rewarding problems, including:</p>
                     <ul>
+                        <li>Suggest and implement architecture designs that function as the backbone of our services.</li>
                         <li>Designing and implementing APIs to expose Machine Learning services.</li>
-                        <li>Developing build, test, and deploy automation pipelines.</li>
                         <li>Promoting good Software Engineering practices to the team.</li>
-                        <li>Building and deploying reproducible and scalable training pipelines.</li>
-                        <li>Distributing training across GPUs and nodes with data and model parallelism.</li>
-                        <li>Scaling Machine Learning models to thousands of users.</li>
+                        <li>Look to improve response times through the use of correct platforms, frameworks and libraries.</li>
+                        <li>Integrate devops pipelines to optimise workflows.</li>
                     </ul>
 
                     <h2>Your qualifications</h2>
@@ -228,28 +227,32 @@
                     <ul>
                         <li>You consider yourself an excellent Software Engineer.</li>
                         <li>You have a keen interest in Machine Learning and Artificial Intelligence.</li>
-                        <li>You have a master’s or Ph.D. in Computer Science or a similar field.</li>
+                        <li>You have a degree (Bachelor's or Master’s) in Computer Science or equivalent work experience.</li>
+                        <li>You have delivered at least one real-life project.</li>
+                        <li>You have great communication skills and love to learn new things.</li>
                     </ul>
 
                     <h2>Your technology stack</h2>
 
                     <ul>
                         <li>You are skilled in Software Engineering with Python and have a strong grasp on source control and reproducibility tooling (<a href="https://git-scm.com/book">git</a>, <a href="https://conda.io/docs/user-guide/getting-started.html">conda</a>, <a href="https://docs.python.org/3/installing/index.html">pip</a>, <a href="https://docs.docker.com/get-started/">docker</a>).</li>
-                        <li>You know your way around the API and web development frameworks (<a href="http://flask.pocoo.org/">flask</a>, <a href="http://click.pocoo.org/">click</a>, <a href="http://www.hug.rest/">hug</a>) and the SciPy stack (<a href="https://pandas.pydata.org/pandas-docs/stable/10min.html">pandas</a>, <a href="https://docs.scipy.org/doc/numpy-dev/user/quickstart.html">numpy</a>, <a href="http://scikit-learn.org/stable/user_guide.html">scikit-learn</a>).</li>
-                        <li>Experience with Asynchronous I/O (<a href="https://docs.python.org/3/library/asyncio.html">asyncio</a>), Deep Learning frameworks (<a href="https://www.tensorflow.org/">TensorFlow</a>, <a href="http://pytorch.org/">PyTorch</a>), and parallel computing libraries (<a href="https://dask.pydata.org/en/latest/">dask</a>, <a href="https://numba.pydata.org/">numba</a>) is a plus.</li>
+                        <li>You know your way around web development frameworks (e.g. <a href="http://flask.pocoo.org/">flask</a>,<a href="https://www.djangoproject.com/">django</a>).</li>
+                        <li>You have a good overview of platforms and services that support production systems and know their advantages and disadvantages (e.g. <a href="https://aws.amazon.com/s3/">aws s3</a> vs <a href="https://www.mongodb.com/cloud/atlas/aws-mongodb">aws MongoDB</a>)
+                        <li>You master software design patterns and architecture design.</li>
+                        <li>Experience with parallel computing libraries (<a href="https://dask.pydata.org/en/latest/">dask</a>, <a href="https://numba.pydata.org/">numba</a>) and the SciPy stack (<a href="https://pandas.pydata.org/pandas-docs/stable/10min.html">pandas</a>, <a href="https://docs.scipy.org/doc/numpy-dev/user/quickstart.html">numpy</a>, <a href="http://scikit-learn.org/stable/user_guide.html">scikit-learn</a>) is a plus.</li>
                     </ul>
 
                     <h2>Benefits &amp; Perks</h2>
 
                     <ul>
-                        <li>A competitive salary with a great package of extra benefits.</li>
+                        <li>A competitive salary(incl. equity) with a great package of extra benefits.</li>
                         <li>Full healthcare benefits plan and group insurance.</li>
                         <li>Your own MacBook Pro and an IT budget to spend as you like.</li>
                         <li>A cool office in Brussels next to the central station.</li>
                         <li>Frequent happy hours and team events to never forget!</li>
                         <li>Work with a great team of passionate people in a startup environment.</li>
                         <li>A unique opportunity to be part of, and learn from, one of the best teams in the field.</li>
-                        <li>A steep and continuous learning curve to become an expert Machine Learning Engineer.</li>
+                        <li>A continuous learning curve to become an expert Software Engineer.</li>
                     </ul>
 
                 </div>
@@ -307,12 +310,11 @@
                     <h2>What you'll do</h2>
                     <p>You will work with our team of engineers to design, implement and deploy end-to-end Machine Learning solutions for ourselves and our clients. You’ll have the opportunity to work on challenging and rewarding problems, including:</p>
                     <ul>
+                        <li>Suggest and implement architecture designs that function as the backbone of our services.</li>
                         <li>Designing and implementing APIs to expose Machine Learning services.</li>
-                        <li>Developing build, test, and deploy automation pipelines.</li>
                         <li>Promoting good Software Engineering practices to the team.</li>
-                        <li>Building and deploying reproducible and scalable training pipelines.</li>
-                        <li>Distributing training across GPUs and nodes with data and model parallelism.</li>
-                        <li>Scaling Machine Learning models to thousands of users.</li>
+                        <li>Look to improve response times through the use of correct platforms, frameworks and libraries.</li>
+                        <li>Integrate devops pipelines to optimise workflows.</li>
                     </ul>
 
                     <h2>Your qualifications</h2>
@@ -320,29 +322,33 @@
                     <ul>
                         <li>You consider yourself an excellent Software Engineer.</li>
                         <li>You have a keen interest in Machine Learning and Artificial Intelligence.</li>
-                        <li>You have a master’s or Ph.D. in Computer Science or a similar field.</li>
+                        <li>You have a master’s degree or Ph.D. in Computer Science or a similar field or equivalent work experience.</li>
                         <li>You have delivered several real-life projects.</li>
-                        <li>You are experienced at solutioning SaaS projects.</li>
+                        <li>You have great communication skills and love to learn new things.</li>
+                        <li>You are experienced at designing practical solutions for SaaS projects.</li>
                     </ul>
 
                     <h2>Your technology stack</h2>
 
                     <ul>
-                        <li>You are an expert in Software Engineering with Python and have a strong grasp on source control and reproducibility tooling (<a href="https://git-scm.com/book">git</a>, <a href="https://conda.io/docs/user-guide/getting-started.html">conda</a>, <a href="https://docs.python.org/3/installing/index.html">pip</a>, <a href="https://docs.docker.com/get-started/">docker</a>).</li>
-                        <li>You know your way around the API and web development frameworks (<a href="http://flask.pocoo.org/">flask</a>, <a href="http://click.pocoo.org/">click</a>, <a href="http://www.hug.rest/">hug</a>) and the SciPy stack (<a href="https://pandas.pydata.org/pandas-docs/stable/10min.html">pandas</a>, <a href="https://docs.scipy.org/doc/numpy-dev/user/quickstart.html">numpy</a>, <a href="http://scikit-learn.org/stable/user_guide.html">scikit-learn</a>).</li>
-                        <li>Experience with Asynchronous I/O (<a href="https://docs.python.org/3/library/asyncio.html">asyncio</a>), Deep Learning frameworks (<a href="https://www.tensorflow.org/">TensorFlow</a>, <a href="http://pytorch.org/">PyTorch</a>), and parallel computing libraries (<a href="https://dask.pydata.org/en/latest/">dask</a>, <a href="https://numba.pydata.org/">numba</a>) is a plus.</li>
+                        <li>You are skilled in Software Engineering with Python and have a strong grasp on source control and reproducibility tooling (<a href="https://git-scm.com/book">git</a>, <a href="https://conda.io/docs/user-guide/getting-started.html">conda</a>, <a href="https://docs.python.org/3/installing/index.html">pip</a>, <a href="https://docs.docker.com/get-started/">docker</a>).</li>
+                        <li>You know your way around web development frameworks (e.g. <a href="http://flask.pocoo.org/">flask</a>,<a href="https://www.djangoproject.com/">django</a>).</li>
+                        <li>You have a good overview of platforms and services that support production systems and know their advantages and disadvantages (e.g. <a href="https://aws.amazon.com/s3/">aws s3</a> vs <a href="https://www.mongodb.com/cloud/atlas/aws-mongodb">aws MongoDB</>)
+                        <li>You master software design patterns and architecture design.</li>
+                        <li>Experience with parallel computing libraries (<a href="https://dask.pydata.org/en/latest/">dask</a>, <a href="https://numba.pydata.org/">numba</a>) and the SciPy stack (<a href="https://pandas.pydata.org/pandas-docs/stable/10min.html">pandas</a>, <a href="https://docs.scipy.org/doc/numpy-dev/user/quickstart.html">numpy</a>, <a href="http://scikit-learn.org/stable/user_guide.html">scikit-learn</a>) is a plus.</li>
                     </ul>
 
                     <h2>Benefits &amp; Perks</h2>
 
                     <ul>
-                        <li>A competitive salary with a great package of extra benefits.</li>
+                        <li>A competitive salary(incl. equity) with a great package of extra benefits.</li>
                         <li>Full healthcare benefits plan and group insurance.</li>
                         <li>Your own MacBook Pro and an IT budget to spend as you like.</li>
                         <li>A cool office in Brussels next to the central station.</li>
                         <li>Frequent happy hours and team events to never forget!</li>
                         <li>Work with a great team of passionate people in a startup environment.</li>
-                        <li>A chance to work with the best in the field.</li>
+                        <li>A unique opportunity to be part of, and learn from, one of the best teams in the field.</li>
+                        <li>A continuous learning curve to become an expert Software Engineer.</li>
                     </ul>
 
                 </div>
