--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                     <ul>
                         <li>You are skilled in Software Engineering with Python and have a strong grasp on source control and reproducibility tooling (<a href="https://git-scm.com/book">git</a>, <a href="https://conda.io/docs/user-guide/getting-started.html">conda</a>, <a href="https://docs.python.org/3/installing/index.html">pip</a>, <a href="https://docs.docker.com/get-started/">docker</a>).</li>
                         <li>You know your way around web development frameworks (e.g. <a href="http://flask.pocoo.org/">flask</a>,<a href="https://www.djangoproject.com/">django</a>).</li>
-                        <li>You have a good overview of platforms and services that support production systems and know their advantages and disadvantages (e.g. <a href="https://aws.amazon.com/s3/">aws s3</a> vs <a href="https://www.mongodb.com/cloud/atlas/aws-mongodb">aws MongoDB</>)
+                        <li>You have a good overview of platforms and services that support production systems and know their advantages and disadvantages (e.g. <a href="https://aws.amazon.com/s3/">aws s3</a> vs <a href="https://www.mongodb.com/cloud/atlas/aws-mongodb">aws MongoDB</a>)
                         <li>You master software design patterns and architecture design.</li>
                         <li>Experience with parallel computing libraries (<a href="https://dask.pydata.org/en/latest/">dask</a>, <a href="https://numba.pydata.org/">numba</a>) and the SciPy stack (<a href="https://pandas.pydata.org/pandas-docs/stable/10min.html">pandas</a>, <a href="https://docs.scipy.org/doc/numpy-dev/user/quickstart.html">numpy</a>, <a href="http://scikit-learn.org/stable/user_guide.html">scikit-learn</a>) is a plus.</li>
                     </ul>
