Correct verbum grammar
Replace `to bringing` by `to bring`.

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                     <div class="description">
 
                         <h2>What you'll do</h2>
-                        <p>At RADIX.AI, we are devoted to bringing the latest advances in Machine Learning to the world. Everything we do needs to be beautifully designed, both on the inside, and the outside. As we are growing strongly, we are now looking for someone who can be committed full-time to the outside part. Concretely, some of the things you will be responsible for are:</p>
+                        <p>At RADIX.AI, we are devoted to bring the latest advances in Machine Learning to the world. Everything we do needs to be beautifully designed, both on the inside, and the outside. As we are growing strongly, we are now looking for someone who can be committed full-time to the outside part. Concretely, some of the things you will be responsible for are:</p>
                         <ul>
                             <li>Shape our identity by owning the front-end side of our AI products.</li>
                             <li>Create AI-powered tools which are dead simple to use, yet convey elegance and quality.</li>
