Next gen announcement

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
 
 <body>
 
+    <section id="nextgen">
+        <div class="container">
+            <div>
+                <p>👋 Hi there! We're launching our new website by September 25, 2019.</p>
+                <p>And we're super excited to show you what we've been working on. Be sure to come back and visit us so you don't miss out!</p>
+                <p>&ndash; Radix</p>
+            </div>
+        </div>
+    </section>
+
     <section id="hero">
         <div class="container">
             <div>
